// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FollowersList> renders "No followers available." when followers are undefined 1`] = `
<DocumentFragment>
  <div
    class="text-gray-700"
  >
    <h3
      class="text-center"
    >
      <p>
        Followers
      </p>
    </h3>
    <div
      class="flex flex-wrap space-x-4"
    >
      <p>
        No followers available.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<FollowersList> renders followers list with data 1`] = `
<DocumentFragment>
  <div
    class="text-gray-700"
  >
    <h3
      class="text-center"
    >
      <p>
        Followers
      </p>
    </h3>
    <div
      class="flex flex-wrap space-x-4"
    >
      <div>
        <a
          href="/"
        >
          <img
            alt="follower1"
          />
        </a>
      </div>
      <div>
        <a
          href="/"
        >
          <img
            alt="follower2"
          />
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
